fixed alignment

--- a/css/scss/pages/_portfolio.scss
+++ b/css/scss/pages/_portfolio.scss
@@ -472,6 +472,9 @@ img {
             box-shadow: 4px 4px 14px rgba(43, 47, 54, 0.3);
             h3 {
                 margin-bottom: 0;
+                pre {
+                    margin: 0;
+                }
             }
         }
         .types-text.abt {
